--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    This project was made with React, react-router and styled with TailWindCSS. The GamesList app is able to search thorugh an API to find games matching the certain titles and display those games. Each games is able to be favourited and filtered by major platform categories. Favourited games will be saved to local stoarge and displayed the favourites section.
+                    This project was made with React, React-Router and styled with TailWindCSS. The GamesList app is able to search thorugh an API to find games matching the certain titles and display those games. Each games is able to be favourited and filtered by major platform categories. Favourited games will be saved to local stoarge and displayed the favourites section.
                   </p>
                   <a  href="https://games-list-app.vercel.app/" target="_blank">
                     <button class="btn btn-primary px-2">
@@ -359,7 +359,7 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    This project was done with HTML JavaScript and styled with TailWindCSS. The goal of the project was the recreate the Monster Cat Corno page respecting mobile responsiveness through the recreation.
+                    This project was made with HTML JavaScript and styled with TailWindCSS. The goal of the project was to recreate the Monster Cat Corno page respecting mobile responsiveness through the recreation.
                   </p>
                   <a  href="https://monster-cat.vercel.app/" target="_blank">
                     <button class="btn btn-primary px-2">
