--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    This project was made with HTML JavaScript and styled with TailWindCSS. The goal of the project was to recreate the Monster Cat Corno page respecting mobile responsiveness through the recreation.
+                    This project was made with HTML JavaScript and styled with TailWindCSS. The goal of the project was to recreate the Monster Cat Corno page respecting mobile responsiveness throughout the recreation process.
                   </p>
                   <a  href="https://monster-cat.vercel.app/" target="_blank">
                     <button class="btn btn-primary px-2">
