--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
                   <p class="mb-4">
                     This project was made with React, React-Router and styled with TailWindCSS. The GamesList app is able to search thorugh an API to find games matching the certain titles and display those games. Each game is able to be favourited and filtered by major platform categories. Favourited games can also be filtered and are displayed the favourites section. On refresh localstorage is used to retrieve the favourties data.
                   </p>
-                  <a  href="https://games-list-app.vercel.app/" target="_blank">
-                    <button class="btn btn-primary px-2">
+                  <a style="text-decoration: none;"  href="https://games-list-app.vercel.app/" target="_blank">
+                    <button  class="btn btn-primary px-2">
                         Website
                       </button>
                   </a>
@@ -361,7 +361,7 @@
                   <p class="mb-4">
                     This project was made with HTML JavaScript and styled with TailWindCSS. The goal of the project was to recreate the Monster Cat Corno page respecting mobile responsiveness throughout the recreation process.
                   </p>
-                  <a  href="https://monster-cat.vercel.app/" target="_blank">
+                  <a style="text-decoration: none;" href="https://monster-cat.vercel.app/" target="_blank">
                     <button class="btn btn-primary px-2">
                         Website
                       </button>
@@ -426,7 +426,7 @@
                   <p class="mb-4">
                     This project was made with React and styled with TailWindCSS. The advice data is taken from an API and stored in useState and passed as a prop to be rendered in components.
                   </p>
-                  <a  href="https://advice-app-omega-six.vercel.app/" target="_blank">
+                  <a style="text-decoration: none;"  href="https://advice-app-omega-six.vercel.app/" target="_blank">
                     <button class="btn btn-primary px-2">
                         Website
                       </button>
