--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
             <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/edric-khoo-98881b173/" target="_blank"
               ><i class="fab fa-fw fa-linkedin-in"></i
             ></a>
-            <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/EdricWebD" target="_blank"
+            <!-- <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/EdricWebD" target="_blank"
             ><i class="fab fa-fw fa-twitter"></i
-          ></a>
+          ></a> -->
   
           </div>
           
