--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    This project was made with React, React-Router and styled with TailWindCSS. The GamesList app is able to search thorugh an API to find games matching the certain titles and display those games. Each game is able to be favourited and filtered by major platform categories. Favourited games can also be filtered and are displayed the favourites section. On refresh localstorage is used to retrieve the favourties data.
+                    This project was made with React, React-Router and styled with TailWindCSS. The GamesList app is able to search through an API to find games matching the certain titles and display those games. Each game is able to be favourited and filtered by major platform categories. Favourited games can also be filtered and are displayed the favourites section. On refresh localstorage is used to retrieve the favourties data.
                   </p>
                   <a style="text-decoration: none;"  href="https://games-list-app.vercel.app/" target="_blank">
                     <button  class="btn btn-primary px-2">
