--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="row">
           <div class="col-lg-6 m-auto text-justify">
             <p class="lead">
-              Hey im Edric, a graduate accountant who has focused heavily on upskilling in the web development industry. Enjoyed the time spent developing side projects and inspired to progress my career down this path.  My learning journey so far has consisted of learning HTML, CSS, Javscript and React basics. Please check out some of my projects i've built with the basics I have learned.
+              Hey im Edric, a graduate accountant who has focused heavily on upskilling in the web development industry. Enjoyed the time spent developing side projects and inspired to progress my career down this path.  My learning journey so far has consisted of learning HTML, CSS, Sass, Javscript and React. Please check out some of my projects i've built.
             </p>
           </div>
          
