--- a/index.html
+++ b/index.html
@@ -429,7 +429,8 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    This project was made with React, React-Router and styled with TailWindCSS. The GamesList app is able to search through an API to find games matching the certain titles and display those games. Each game is able to be favourited and filtered by major platform categories. Favourited games can also be filtered and are displayed the favourites section. On refresh localstorage is used to retrieve the favourties data.
+                    This project was made with React, React-Router and styled with TailWindCSS. The GamesList app is able to search through an API to find games matching the certain titles and display those games. Each game is able to be favourited and filtered by major platform categories. Favourited games can also be filtered and are displayed the favourites section. On refresh local storage is used to retrieve the favourites data.
+
                   </p>
 
                   <p>
@@ -498,7 +499,7 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    This project was made with HTML JavaScript and styled with TailWindCSS. The goal of the project was to recreate the Monster Cat Corno page respecting mobile responsiveness throughout the recreation process.
+                    This project was made with HTML JavaScript and styled with TailWindCSS. The goal of the project was to recreate the look of the Monster Cat Corno page respecting mobile responsiveness throughout the recreation process.
                   </p>
                   <p>
                     Built with: HTML, CSS/TailwindCSS and Javascript
@@ -633,7 +634,7 @@
                 />
                 <!-- Portfolio Modal - Text-->
                 <p class="mb-4">
-                  Recreating fake-os look of Windows 98. This app was created with HTML, Sass and vanilla Javascript. The styling was split with Sass into component specific files and were selected with BEM convention.
+                  Recreating fake-os look of Windows 98. This app was created with HTML, Sass and vanilla Javascript. The styling was split with Sass into component specific files and were selected with BEM convention. The user will be able to view the current time and open Notepad app, Paint app and Address Book simultaneously. These apps will be able to be dragged around.
                 </p>
                 <p>
                   Built with: HTML, CSS/SCSS and Javascript
@@ -702,7 +703,7 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    This project fetches Data within the react App from a Firestore database. React router was used to create home, favourites and cart routes that users can go to. A grid of products are displayed and users are able to add it to their faviourites or add the item to their cart. In the cart route users can add or remove items and perform a checkout which will mutate the stock in firestore database.
+                    This project fetches Data within the React App from a Firestore database. React router was used to create home, favourites and cart routes that users can go to. A grid of products are displayed and users are able to add it to their favourites or add the item to their cart. In the cart route users can add or remove items and perform a checkout which will mutate the item stock in the firestore database.
                   </p>
                   <p>
                     Built with: React, SCSS, React Router DOM and Firestore
@@ -771,7 +772,7 @@
                     />
                     <!-- Portfolio Modal - Text-->
                     <p class="mb-4">
-                      This project will take user input and translate it from latin to morse code or reverse depending on which mode it is on. Unit testing was used and done with jest to ensure functionality was suffice. This project reinforce aspects of DOM manipulation and unit testing.
+                      This project will take user input and translate it from latin to morse code or reverse depending on which mode it is on. Unit testing was used and done with jest to ensure functionality was sufficient. This project reinforced aspects of DOM manipulation and unit testing.
                     </p>
                     <p>Built with: HTML, CSS/SCSS, Javascript and Jest</p>
                     <a style="text-decoration: none;"  href="https://morse-code-translator-project.vercel.app/" target="_blank">
