--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                   <h2
                     class="portfolio-modal-title text-secondary text-uppercase mb-0"
                   >
-                    Advice App
+                    E-Commerce App
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
