Spelling error fix

--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    This project is a spring api which stores high scores for my pokemon quiz app. The API accepts a get method which will query the highscores database and get all enteries sorted from highest to lowest. A post method is also accepting a data transfer object with name and score. After it is passed into the controller and service it will create a highscore entity adding a unique ID and then querying the database to post it.
+                    This project is a spring api which stores high scores for my pokemon quiz app. The API accepts a get method which will query the highscores database and get all entries sorted from highest to lowest. A post method is also accepting a data transfer object with name and score. After it is passed into the controller and service it will create a highscore entity adding a unique ID and then querying the database to post it.
                   </p>
                   <p>Built with: Java and Spring</p>
                  
