Changed reclone backend github link and removed pokemon highscore

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             </div>
           </div>
 
-<!-- Portfolio Item 8-->
+<!-- Portfolio Item 8
 <div class="col-md-6 col-lg-4 mb-5">
   <div
     class="portfolio-item mx-auto"
@@ -390,7 +390,7 @@
       alt="..."
     />
   </div>
-</div>
+</div> -->
 
 
 
@@ -1190,7 +1190,7 @@ aria-hidden="true"
                   GitHub - Frontend
                 </button>
             </a>
-            <a class="mx-2" href="https://github.com/edrickhoo/reddit-clone-back-end" target="_blank">
+            <a class="mx-2" href="https://github.com/edrickhoo/reclone-backend" target="_blank">
               <button class="btn btn-primary">
                   GitHub - Backend
                 </button>
